fix the layout issue with individual list

--- a/src/components/layout/tree.css
+++ b/src/components/layout/tree.css
@@ -140,7 +140,7 @@
   display: inline-block;
   vertical-align: top;
   margin-bottom: 5px;
-  width: 80%;
+  width: 100%;
   position: absolute;
   padding-left: 5px;
 }
@@ -194,4 +194,5 @@
   padding-left: 0;
   cursor: pointer;
   font-size: 13px;
+  white-space: nowrap;
 }
